fixes  #2097 Browse Page: Decrease vertical spacing between sections 50%

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/browse/browse.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/browse/browse.css
@@ -367,7 +367,7 @@
 }
 
 .list-header{
-    margin-top: 45px;
+    margin-top: 25px;
 }
 
 .tooltip .tooltip-inner{
